@@ -254,6 +254,7 @@ Vlad Glagolev (Stelz)" # OpenBSD packager
 [about]
 title = _ "Contributors"
 text = "
+Ali El Gariani (alink)
 Andrea Palmatè (afxgroup)
 Daniel Bruegmann
 Ely Levy (Nakee)
