@@ -19,6 +19,7 @@ Version 1.3.1+svn:
      most importantly speeds up the drawing of the halos.
    * units are scaled properly when zooming also with tiny gui (bug #8703 and bug #6570)
    * haloes in tiny gui are now scaled (before unscaled, thus a factor 2 bigger as intended)
+   * the movement text is also scaled now (bug #6876, patch patch #693)
 * language and i18n:
    * updated translations: Bulgarian, Czech, Danish, Dutch, French, German,
      Hungarian, Italian, Norwegian, Portuguese (Brazil)
